# midio

./: Cargo.toml
examples/: test_forward.rs  test_list_ports.rs  test_play.rs  test_read_input.rs  test_reuse.rs  test_sysex.rs
examples/browser/src/: lib.rs
src/: common.rs  lib.rs
src/backend/: mod.rs
src/backend/alsa/: mod.rs
tests/: virtual.rs
